Chapter 3 updated: introduction and manuals added

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,3 +1,27 @@
+@misc{Spark2022,
+   abstract = {Since Ada targets safety-critical programs, many features of the language introduce safety nets in the form of language-mandated checks. Even if compile-time verification is preferred to runtime verification whenever possible, many of these checks are still done dynamically, an exception being raised in case of violation. The addition of contracts in Ada 2012 follows a similar trend, as a violation causes an exception to be raised when the code is compiled with assertions enabled. The SPARK tool aims at statically verifying that language-mandated checks and the user-written contracts can never fail at runtime. In this article, we give insights on how the tool works in practice and what are the most important challenges as of today.},
+   issue = {1},
+   journal = {Ada User Journal},
+   keywords = {SPARK,deductive verification,proof of program},
+   title = {The Work of Proof in SPARK},
+   volume = {35},
+   url = {https://github.com/AdaCore/spark2014},
+   year = {2022},
+}
+@misc{Baudin,
+   author = {Patrick Baudin and Jean-Christophe Filliâtre and Claude Marché and Benjamin Monate and Yannick Moy and Virgile Prevosto},
+   title = {ACSL: ANSI C Specification Language},
+}
+@misc{,
+   author = {Mário José and Parreira Pereira},
+   title = {Tools and Techniques for the Verification of Modular Stateful Code},
+   url = {https://theses.hal.science/tel-01980343v1},
+}
+@misc{Leavens2008,
+   author = {Gary T Leavens and Erik Poll and Curtis Clifton and Yoonsik Cheon and Clyde Ruby and David Cok and Peter Müller and Joseph Kiniry and Patrice Chalin and Daniel M Zimmerman and Werner Dietl},
+   title = {JML Reference Manual},
+   year = {2008},
+}
 @misc{Pereira,
    author = {Mário José and Parreira Pereira},
    title = {Tools and Techniques for the Verification of Modular Stateful Code},
@@ -120,8 +144,6 @@
    title = {Research on formal verification technique for aircraft safety-critical software},
    volume = {5},
    year = {2010},
-}
-@undefined{,
 }
 @article{Soares_Chirica_Pereira2024,
    abstract = {We present our work on the collaborative use of dynamic and static analysis tools for the verification of software written in the OCaml language. We build upon Gospel, a specification language for OCaml that can be used both in dynamic and static analyses. We employ Ortac, for runtime assertion checking, and Cameleer and CFML for the deductive verification of OCaml code. We report on the use of such tools to build a case study of collaborative analysis of a non-trivial OCaml program. This shows how these tools nicely complement each others, while at the same highlights the differences when writing specification targeting dynamic or static analysis methods.},
