Added some TODOs

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,3 +1,27 @@
+@article{Signoles2017,
+   abstract = {This tool paper presents E-ACSL, a runtime verification tool for C programs capable of checking a broad range of safety and security properties expressed using a formal specification language. E-ACSL consumes a C program annotated with formal specifications and generates a new C program that behaves similarly to the original if the formal properties are satisfied, or aborts its execution whenever a property does not hold. This paper presents an overview of E-ACSL and its specification language.},
+   author = {Julien Signoles and Nikolai Kosmatov and Kostyantyn Vorobyov and Kostyantyn Vorobyov. E-Acsl},
+   doi = {10.29007/FPDHï},
+   keywords = {Formal Specification Language,Memory Debugger,Runtime Assertion Checking,Runtime Verification Tool},
+   title = {E-ACSL, a runtime verification tool for safety and security of C programs (tool paper)},
+   url = {http://frama-c.com},
+   year = {2017},
+}
+@article{Sánchez2019,
+   abstract = {Runtime verification is an area of formal methods that studies the dynamic analysis of execution traces against formal specifications. Typically, the two main activities in runtime verification efforts are the process of creating monitors from specifications, and the algorithms for the evaluation of traces against the generated monitors. Other activities involve the instrumentation of the system to generate the trace and the communication between the system under analysis and the monitor. Most of the applications in runtime verification have been focused on the dynamic analysis of software, even though there are many more potential applications to other computational devices and target systems. In this paper we present a collection of challenges for runtime verification extracted from concrete application domains, focusing on the difficulties that must be overcome to tackle these specific challenges. The computational models that characterize these domains require to devise new techniques beyond the current state of the art in runtime verification.},
+   author = {César Sánchez and Gerardo Schneider and Wolfgang Ahrendt and Ezio Bartocci and Domenico Bianculli and Christian Colombo and Yliès Falcone and Adrian Francalanza and Srđan Krstić and Joa̋o M. Lourenço and Dejan Nickovic and Gordon J. Pace and Jose Rufino and Julien Signoles and Dmitriy Traytel and Alexander Weiss},
+   doi = {10.1007/s10703-019-00337-w},
+   issn = {15728102},
+   issue = {3},
+   journal = {Formal Methods in System Design},
+   keywords = {Computer science,Formal methods,Formal verification,Runtime verification},
+   month = {11},
+   pages = {279-335},
+   publisher = {Springer New York LLC},
+   title = {A survey of challenges for runtime verification from advanced application domains (beyond software)},
+   volume = {54},
+   year = {2019},
+}
 @misc{Spark2022,
    abstract = {Since Ada targets safety-critical programs, many features of the language introduce safety nets in the form of language-mandated checks. Even if compile-time verification is preferred to runtime verification whenever possible, many of these checks are still done dynamically, an exception being raised in case of violation. The addition of contracts in Ada 2012 follows a similar trend, as a violation causes an exception to be raised when the code is compiled with assertions enabled. The SPARK tool aims at statically verifying that language-mandated checks and the user-written contracts can never fail at runtime. In this article, we give insights on how the tool works in practice and what are the most important challenges as of today.},
    issue = {1},
